<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/refresh">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            style="@style/header"
            android:id="@+id/header">
            <TextView
            style="@style/text_title"
            android:id="@+id/nameCourse"
            android:text="@string/course"/>
        </RelativeLayout>
        <RelativeLayout
            style="@style/body"
            android:id="@+id/body"
            android:layout_below="@id/header"
            android:layout_above="@id/footer">
            <TextView
                style="@style/text_small"
                android:id="@+id/time"
                android:layout_alignParentStart="true"
                android:layout_marginStart="40dp"
                android:text="@string/time"/>
            <TextView
                style="@style/text_small"
                android:layout_centerHorizontal="true"
                android:text="@string/date"/>
            <TextView
                style="@style/text_small"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="40dp"
                android:text="@string/stat"/>
            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/time">
                <LinearLayout
                    style="@style/Layout_list"
                    android:id="@+id/list_attendances">
                </LinearLayout>
            </androidx.core.widget.NestedScrollView>
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                style="@style/button_floating"
                android:id="@+id/add"
                android:backgroundTint="@android:color/holo_purple"
                android:src="@drawable/add" />
        </RelativeLayout>
        <include layout="@layout/footer"/>
    </RelativeLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>