<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:padding="20dp"
    android:layout_gravity="center"
    android:gravity="center">

    <ImageView
        android:id="@+id/pic"
        android:layout_width="240dp"
        android:layout_height="240dp"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="40dp"
        android:background="@drawable/online_exam" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pic"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:text="@string/log_in"
        android:textColor="@color/blacky"
        android:textSize="35sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_centerInParent="true"
        android:text="@string/sign_in_msg"
        android:textSize="18sp" />

    <LinearLayout
        android:id="@+id/input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/description"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/style_constraint"
            android:drawableRight="@drawable/email"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="12dp"
            android:translationZ="4dp"
            android:layout_marginBottom="20dp"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/style_constraint"
            android:drawableEnd="@drawable/password"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="12dp"
            android:translationZ="4dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/remember"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:text="@string/remember_me"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/forget_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/forgot_password" />
        </RelativeLayout>
    </LinearLayout>
    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="12dp"
        android:layout_marginBottom="40dp"
        android:text="@string/log_in"
        android:textColor="@color/blacky"
        android:textStyle="bold"/>
</RelativeLayout>