<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/refresh">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            style="@style/header"
            android:id="@+id/header">
            <TextView
                style="@style/text_title"
                android:id="@+id/course_name"
                android:text="@string/course_name"/>
            <Button
                style="@style/Button_icon"
                android:id="@+id/qr_generator"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:background="@drawable/qr_generator"/>
        </RelativeLayout>
        <ImageView
            android:id="@+id/qr_generated"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_below="@id/header"
            android:layout_above="@+id/body"
            android:layout_centerInParent="true"
            android:visibility="gone"/>
        <RelativeLayout
            style="@style/body"
            android:layout_above="@+id/footer"
            android:layout_below="@id/qr_generated">
            <TextView
                style="@style/text_small"
                android:id="@+id/time"
                android:layout_alignParentStart="true"
                android:layout_marginStart="40dp"
                android:text="@string/time"/>
            <TextView
                style="@style/text_small"
                android:id="@+id/date"
                android:layout_alignParentEnd="true"
                android:layout_centerHorizontal="true"
                android:layout_marginEnd="40dp"
                android:text="@string/date"/>
            <androidx.core.widget.NestedScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/time">
                <LinearLayout
                    style="@style/Layout_list"
                    android:id="@+id/list_students"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/style_constraint"
                    android:translationZ="3dp"
                    android:padding="12dp">
                </LinearLayout>
            </androidx.core.widget.NestedScrollView>
        </RelativeLayout>
        <include layout="@layout/footer"/>
    </RelativeLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>